--- a/web/contato.html
+++ b/web/contato.html
@@ -19,13 +19,7 @@
     <meta property="og:url" content="http://bikcraft.com/contato.html" />
     <meta property="og:image" content="http://bikcraft.com/img/og-image.png" />
 
-    <link rel="stylesheet" href="./css/normalize.css" />
-    <link rel="stylesheet" href="./css/reset.css" />
-    <link rel="stylesheet" href="./css/grid.css" />
     <link rel="stylesheet" href="./css/styles.css" />
-    <link rel="stylesheet" href="./css/contato.css" />
-    <link rel="stylesheet" href="./css/responsivo.css" />
-
     <link rel="icon" href="./favicon.ico" />
 
     <script>
@@ -118,15 +112,15 @@
       </div>
     </section>
 
-    <section class="container">
+    <div class="container">
       <div class="contato_mapa">
         <a href="http://www.google.com" target="_blank" class="grid-16"
           ><img src="./img/endereco-bikcraft.jpg" alt="Endereço Bikcraft"
         /></a>
       </div>
-    </section>
+    </div>
 
-    <section class="quebra">
+    <div class="quebra">
       <blockquote class="quote-externo container">
         <p>
           "O verdadeiro segredo da felicidade está em ter um genuíno interesse
@@ -134,7 +128,7 @@
         </p>
         <cite>WILLIAM MORRIS</cite>
       </blockquote>
-    </section>
+    </div>
 
     <footer>
       <div class="footer">
@@ -167,12 +161,12 @@
               </li>
               <li>
                 <a href="https://www.instagram.com"
-                  ><img src="./img/redes-sociais/instagram.svg" alt="Facebook"
+                  ><img src="./img/redes-sociais/instagram.svg" alt="Instagram"
                 /></a>
               </li>
               <li>
                 <a href="https://www.twitter.com"
-                  ><img src="./img/redes-sociais/twitter.svg" alt="Facebook"
+                  ><img src="./img/redes-sociais/twitter.svg" alt="Twitter"
                 /></a>
               </li>
             </ul>
