--- a/web/index.html
+++ b/web/index.html
@@ -4,21 +4,22 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Bikcraft - Bicicletas Personalizadas</title>
-    <meta name="description" content="Compre a sua bicicleta personalizada na Bikcraft. Possuímos modelos Passeio, Esporte e Retrô.">
+    <meta
+      name="description"
+      content="Compre a sua bicicleta personalizada na Bikcraft. Possuímos modelos Passeio, Esporte e Retrô."
+    />
 
-    <meta property="og:type" content="website"/>
-    <meta property="og:title" content="Bikcraft - Bicicletas Personalizadas"/>
-    <meta property="og:description" content="Compre a sua bicicleta personalizada na Bikcraft. Possuímos modelos Passeio, Esporte e Retrô."/>
-    <meta property="og:url" content="http://bikcraft.com"/>
-    <meta property="og:image" content="http://bikcraft.com/img/og-image.png"/>      
+    <meta property="og:type" content="website" />
+    <meta property="og:title" content="Bikcraft - Bicicletas Personalizadas" />
+    <meta
+      property="og:description"
+      content="Compre a sua bicicleta personalizada na Bikcraft. Possuímos modelos Passeio, Esporte e Retrô."
+    />
+    <meta property="og:url" content="http://bikcraft.com" />
+    <meta property="og:image" content="http://bikcraft.com/img/og-image.png" />
 
-    <link rel="stylesheet" href="./css/normalize.css" />
-    <link rel="stylesheet" href="./css/reset.css" />
-    <link rel="stylesheet" href="./css/grid.css" />
     <link rel="stylesheet" href="./css/styles.css" />
-    <link rel="stylesheet" href="./css/responsivo.css" />
-
-    <link rel="icon" href="./favicon.ico">
+    <link rel="icon" href="./favicon.ico" />
 
     <script>
       document.documentElement.classList.add("js");
@@ -45,7 +46,10 @@
       <div class="container">
         <h1 data-anime="400" class="fadeInDown">Bicicletas feitas a Mão</h1>
         <blockquote class="fadeInDown quote-externo" data-anime="800">
-            <p>“Não tenha nada em sua casa que você não considere útil ou acredita ser bonito.”</p>
+          <p>
+            “Não tenha nada em sua casa que você não considere útil ou acredita
+            ser bonito.”
+          </p>
           <cite>WILLIAM MORRIS</cite>
         </blockquote>
         <a href="produtos.html" class="btn" data-anime="1200">Orçamento</a>
@@ -60,29 +64,23 @@
             <img src="./img/produtos/passeio.svg" alt="Bikcraft Passeio" />
           </div>
           <h3>Passeio</h3>
-          <p>
-            Muito melhor do que passear pela orla a vidros fechados.
-          </p>
+          <p>Muito melhor do que passear pela orla a vidros fechados.</p>
+        </li>
 
-          <li class="grid-1-3">
-            <div class="produtos_icone">
-              <img src="./img/produtos/esporte.svg" alt="Bikcraft Esporte" />
-            </div>
-            <h3>Esporte</h3>
-            <p>
-              Mais rápida do que Forrest Gump, ninguém vai pegar você.
-            </p>
-           </li>
+        <li class="grid-1-3">
+          <div class="produtos_icone">
+            <img src="./img/produtos/esporte.svg" alt="Bikcraft Esporte" />
+          </div>
+          <h3>Esporte</h3>
+          <p>Mais rápida do que Forrest Gump, ninguém vai pegar você.</p>
+        </li>
 
-           <li class="grid-1-3">
-            <div class="produtos_icone">
-              <img src="./img/produtos/retro.svg" alt=" Bikcraft Retrô" /> 
-            </div>
-            <h3>Retrô</h3>
-            <p>
-              O passado volta para lembrarmos o que devemos fazer no futuro.
-            </p>
-           </li>
+        <li class="grid-1-3">
+          <div class="produtos_icone">
+            <img src="./img/produtos/retro.svg" alt=" Bikcraft Retrô" />
+          </div>
+          <h3>Retrô</h3>
+          <p>O passado volta para lembrarmos o que devemos fazer no futuro.</p>
         </li>
       </ul>
 
@@ -90,101 +88,125 @@
         <p>Clique aqui e veja os detalhes dos produtos</p>
         <a href="produtos.html" class="btn btn_preto">Produtos</a>
       </div>
-
     </section>
     <!-- Fecha Produtos -->
 
     <section class="portfolio">
       <div class="container">
-      <h2 class="subtitulo">Portifólio</h2>
-      <ul class="portfolio_lista">
-        <li class="grid-8"><img src="./img/portfolio/retro.jpg" alt="Bicicleta Retrô"></li>
-        <li class="grid-8"><img src="./img/portfolio/passeio.jpg" alt="Bicicleta Passeio"></li>
-        <li class="grid-16"><img src="./img/portfolio/esporte.jpg" alt="Bicicleta Esporte"></li>
-      </ul>
-      <div class="call">
-        <p>Conheça mais o nosso Portfólio</p>
-        <a href="portfolio.html" class="btn">Portfólio</a>
-      </div>
+        <h2 class="subtitulo">Portifólio</h2>
+        <ul class="portfolio_lista">
+          <li class="grid-8">
+            <img src="./img/portfolio/retro.jpg" alt="Bicicleta Retrô" />
+          </li>
+          <li class="grid-8">
+            <img src="./img/portfolio/passeio.jpg" alt="Bicicleta Passeio" />
+          </li>
+          <li class="grid-16">
+            <img src="./img/portfolio/esporte.jpg" alt="Bicicleta Esporte" />
+          </li>
+        </ul>
+        <div class="call">
+          <p>Conheça mais o nosso Portfólio</p>
+          <a href="portfolio.html" class="btn">Portfólio</a>
+        </div>
       </div>
     </section>
 
     <section class="qualidade container">
       <h2 class="subtitulo">Qualidade</h2>
-        <img src="./img/bikcraft-qualidade.svg" alt="Bikcraft">
-        <ul class="qualidade_lista">
-          <li class="grid-1-3">
-            <h3>Durabilidade</h3>
-            <p>Sólida como pedra, leve como o vento e resistente como o diamante, são nossos diferenciais.</p>
-          </li>
-          <li class="grid-1-3">
-            <h3>Design</h3>
-            <p>Feitas sob medida para o melhor conforto e eficiência. Adaptamos a sua Bikcraft para o seu corpo.</p>
-          </li>
-          <li class="grid-1-3">
-            <h3>Sustentabilidade</h3>
-            <p>Além de ajudar a cuidar do meio ambiente, tirando carros da rua, toda a produção é sustentável.</p>
-          </li>
-        </ul>
+      <img src="./img/bikcraft-qualidade.svg" alt="Bikcraft" />
+      <ul class="qualidade_lista">
+        <li class="grid-1-3">
+          <h3>Durabilidade</h3>
+          <p>
+            Sólida como pedra, leve como o vento e resistente como o diamante,
+            são nossos diferenciais.
+          </p>
+        </li>
+        <li class="grid-1-3">
+          <h3>Design</h3>
+          <p>
+            Feitas sob medida para o melhor conforto e eficiência. Adaptamos a
+            sua Bikcraft para o seu corpo.
+          </p>
+        </li>
+        <li class="grid-1-3">
+          <h3>Sustentabilidade</h3>
+          <p>
+            Além de ajudar a cuidar do meio ambiente, tirando carros da rua,
+            toda a produção é sustentável.
+          </p>
+        </li>
+      </ul>
 
-        <div class="call">
-          <p>Conheça mais a nossa História</p>
-          <a href="sobre.html" class="btn btn_preto">Sobre</a>
-        </div>
+      <div class="call">
+        <p>Conheça mais a nossa História</p>
+        <a href="sobre.html" class="btn btn_preto">Sobre</a>
+      </div>
     </section>
 
-
-    <section class="quebra">
+    <div class="quebra">
       <blockquote class="quote-externo container">
         <p>
-          "O verdadeiro segredo da felicidade está em ter um genuíno interesse por todos os detalhes da vida cotidiana."
+          "O verdadeiro segredo da felicidade está em ter um genuíno interesse
+          por todos os detalhes da vida cotidiana."
         </p>
         <cite>WILLIAM MORRIS</cite>
       </blockquote>
-    </section>
+    </div>
 
     <footer>
-
       <div class="footer">
         <div class="container">
-        <div class="grid-8 footer_historia">
-          <h3>Nossa História</h3>
-          <p>O verdadeiro segredo da felicidade está em ter um genuíno
-            interesse por todos os detalhes da vida cotidiana. 
-            Interesse por todos os detalhes da vida cotidiana.</p>
-        </div>
-        
-        <div class="grid-4 footer_contato">
-          <h3>Contato</h3>
-          <ul>
-            <li>- 21 9999-9999</li>
-            <li>- contato@bikcraft.com</li>
-            <li>- Botafogo - RJ</li>
-          </ul>
-        </div>
-        
-        <div class="grid-4 footer_redes">
-          <h3>Redes Sociais</h3>
-          <ul>
-            <li><a href="https://www.facebook.com"><img src="./img/redes-sociais/facebook.svg" alt="Facebook"></a></li>
-            <li><a href="https://www.instagram.com"><img src="./img/redes-sociais/instagram.svg" alt="Facebook"></a></li>
-            <li><a href="https://www.twitter.com"><img src="./img/redes-sociais/twitter.svg" alt="Facebook"></a></li>
-          </ul>
-        </div>
+          <div class="grid-8 footer_historia">
+            <h3>Nossa História</h3>
+            <p>
+              O verdadeiro segredo da felicidade está em ter um genuíno
+              interesse por todos os detalhes da vida cotidiana. Interesse por
+              todos os detalhes da vida cotidiana.
+            </p>
+          </div>
 
+          <div class="grid-4 footer_contato">
+            <h3>Contato</h3>
+            <ul>
+              <li>- 21 9999-9999</li>
+              <li>- contato@bikcraft.com</li>
+              <li>- Botafogo - RJ</li>
+            </ul>
+          </div>
+
+          <div class="grid-4 footer_redes">
+            <h3>Redes Sociais</h3>
+            <ul>
+              <li>
+                <a href="https://www.facebook.com"
+                  ><img src="./img/redes-sociais/facebook.svg" alt="Facebook"
+                /></a>
+              </li>
+              <li>
+                <a href="https://www.instagram.com"
+                  ><img src="./img/redes-sociais/instagram.svg" alt="Instagram"
+                /></a>
+              </li>
+              <li>
+                <a href="https://www.twitter.com"
+                  ><img src="./img/redes-sociais/twitter.svg" alt="Twitter"
+                /></a>
+              </li>
+            </ul>
+          </div>
         </div>
       </div>
 
       <div class="copy">
         <div class="container">
-        <p class="grid-16">Bikcraft 2020 - Alguns direitos reservados.</p>
+          <p class="grid-16">Bikcraft 2020 - Alguns direitos reservados.</p>
+        </div>
       </div>
-      </div>
-
     </footer>
 
     <script src="./js/simple-anime.js"></script>
     <script src="./js/script.js"></script>
-
   </body>
 </html>
