--- a/web/portfolio.html
+++ b/web/portfolio.html
@@ -5,21 +5,24 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Bikcraft - Conheça o portfólio de clientes</title>
 
-    <meta name="description" content="Compre a sua bicicleta personalizada na Bikcraft. Possuímos modelos Passeio, Esporte e Retrô.">
+    <meta
+      name="description"
+      content="Compre a sua bicicleta personalizada na Bikcraft. Possuímos modelos Passeio, Esporte e Retrô."
+    />
 
-    <meta property="og:type" content="website"/>
-    <meta property="og:title" content="Bikcraft - Conheça o portifólio de clientes"/>
-    <meta property="og:description" content="Compre a sua bicicleta personalizada na Bikcraft. Possuímos modelos Passeio, Esporte e Retrô."/>
-    <meta property="og:url" content="http://bikcraft.com/portfolio.html"/>
-    <meta property="og:image" content="http://bikcraft.com/img/og-image.png"/> 
+    <meta property="og:type" content="website" />
+    <meta
+      property="og:title"
+      content="Bikcraft - Conheça o portifólio de clientes"
+    />
+    <meta
+      property="og:description"
+      content="Compre a sua bicicleta personalizada na Bikcraft. Possuímos modelos Passeio, Esporte e Retrô."
+    />
+    <meta property="og:url" content="http://bikcraft.com/portfolio.html" />
+    <meta property="og:image" content="http://bikcraft.com/img/og-image.png" />
 
-    <link rel="stylesheet" href="./css/normalize.css" />
-    <link rel="stylesheet" href="./css/reset.css" />
-    <link rel="stylesheet" href="./css/grid.css" />
     <link rel="stylesheet" href="./css/styles.css" />
-    <link rel="stylesheet" href="./css/portfolio.css" />
-    <link rel="stylesheet" href="./css/responsivo.css" />
-
     <link rel="icon" href="./favicon.ico" />
 
     <script>
@@ -52,7 +55,7 @@
       </div>
     </section>
 
-    <section class="container fadeInDown" data-slide="quote" data-anime="1200">
+    <div class="container fadeInDown" data-slide="quote" data-anime="1200">
       <blockquote class="quote_clientes">
         <p>
           "Pedalar sempre foi a minha paixão, o que o pessoal da Bikcraft fez
@@ -76,9 +79,9 @@
         </p>
         <cite>Bernardo</cite>
       </blockquote>
-    </section>
+    </div>
 
-    <section class="portfolio">
+    <div class="portfolio">
       <div class="container" data-slide="portfolio">
         <ul class="portfolio_lista">
           <li class="grid-8">
@@ -91,21 +94,22 @@
             <img src="./img/portfolio/esporte.jpg" alt="Bicicleta Esporte" />
           </li>
         </ul>
+
         <ul class="portfolio_lista">
           <li class="grid-8">
             <img src="./img/portfolio/passeio.jpg" alt="Bicicleta Passeio" />
-            <li class="grid-8">
-              <img src="./img/portfolio/retro.jpg" alt="Bicicleta Retrô" />
-            </li>
+          </li>
+          <li class="grid-8">
+            <img src="./img/portfolio/retro.jpg" alt="Bicicleta Retrô" />
           </li>
           <li class="grid-16">
             <img src="./img/portfolio/esporte.jpg" alt="Bicicleta Esporte" />
           </li>
         </ul>
       </div>
-    </section>
+    </div>
 
-    <section class="quebra">
+    <div class="quebra">
       <blockquote class="quote-externo container">
         <p>
           "O verdadeiro segredo da felicidade está em ter um genuíno interesse
@@ -113,7 +117,7 @@
         </p>
         <cite>WILLIAM MORRIS</cite>
       </blockquote>
-    </section>
+    </div>
 
     <footer>
       <div class="footer">
@@ -146,12 +150,12 @@
               </li>
               <li>
                 <a href="https://www.instagram.com"
-                  ><img src="./img/redes-sociais/instagram.svg" alt="Facebook"
+                  ><img src="./img/redes-sociais/instagram.svg" alt="Instagram"
                 /></a>
               </li>
               <li>
                 <a href="https://www.twitter.com"
-                  ><img src="./img/redes-sociais/twitter.svg" alt="Facebook"
+                  ><img src="./img/redes-sociais/twitter.svg" alt="Twitter"
                 /></a>
               </li>
             </ul>
