--- a/web/produtos.html
+++ b/web/produtos.html
@@ -5,22 +5,25 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Bikcraft - Conheça as linhas Passeio, Esporte e Retrô</title>
 
-    <meta name="description" content="Compre a sua bicicleta personalizada na Bikcraft. Possuímos modelos Passeio, Esporte e Retrô.">
+    <meta
+      name="description"
+      content="Compre a sua bicicleta personalizada na Bikcraft. Possuímos modelos Passeio, Esporte e Retrô."
+    />
 
-    <meta property="og:type" content="website"/>
-    <meta property="og:title" content="Bikcraft - Conheça as linhas Passeio, Esporte e Retrô"/>
-    <meta property="og:description" content="Compre a sua bicicleta personalizada na Bikcraft. Possuímos modelos Passeio, Esporte e Retrô."/>
-    <meta property="og:url" content="http://bikcraft.com/produtos.html"/>
-    <meta property="og:image" content="http://bikcraft.com/img/og-image.png"/> 
+    <meta property="og:type" content="website" />
+    <meta
+      property="og:title"
+      content="Bikcraft - Conheça as linhas Passeio, Esporte e Retrô"
+    />
+    <meta
+      property="og:description"
+      content="Compre a sua bicicleta personalizada na Bikcraft. Possuímos modelos Passeio, Esporte e Retrô."
+    />
+    <meta property="og:url" content="http://bikcraft.com/produtos.html" />
+    <meta property="og:image" content="http://bikcraft.com/img/og-image.png" />
 
-    <link rel="stylesheet" href="./css/normalize.css" />
-    <link rel="stylesheet" href="./css/reset.css" />
-    <link rel="stylesheet" href="./css/grid.css" />
     <link rel="stylesheet" href="./css/styles.css" />
-    <link rel="stylesheet" href="./css/produtos.css" />
-    <link rel="stylesheet" href="./css/responsivo.css" />
-
-    <link rel="icon" href="./favicon.ico">
+    <link rel="icon" href="./favicon.ico" />
 
     <script>
       document.documentElement.classList.add("js");
@@ -71,7 +74,9 @@
       </div>
       <div class="grid-8 produto_info">
         <p>
-          Muito melhor do que passear pela orla a vidros fechados. A Bikcraft Passeio é uma bibicleta que une conforto e praticidade para o seu dia a dia. Você nunca mais vai querer saber de outra.
+          Muito melhor do que passear pela orla a vidros fechados. A Bikcraft
+          Passeio é uma bibicleta que une conforto e praticidade para o seu dia
+          a dia. Você nunca mais vai querer saber de outra.
         </p>
         <ul>
           <li>Conforto</li>
@@ -79,6 +84,7 @@
           <li>Design</li>
           <li>Versatilidade</li>
         </ul>
+      </div>
     </section>
 
     <section class="container produto_item">
@@ -100,7 +106,9 @@
       </div>
       <div class="grid-8 produto_info">
         <p>
-      Mais rápida do que Forrest Gump, ninguém vai pegar você. A Bikcraft Esporte é uma bicicleta desenhada para a máxima performance. O seu desenpenho supera qualquer uma da categoria.
+          Mais rápida do que Forrest Gump, ninguém vai pegar você. A Bikcraft
+          Esporte é uma bicicleta desenhada para a máxima performance. O seu
+          desenpenho supera qualquer uma da categoria.
         </p>
         <ul>
           <li>Conforto</li>
@@ -108,61 +116,77 @@
           <li>Design</li>
           <li>Versatilidade</li>
         </ul>
+      </div>
     </section>
 
     <section class="container produto_item">
       <div class="grid-11">
-        <img
-          src="./img/produtos/bikcraft-retro-1.jpg"
-          alt="Bikcraft Retrô"
-        />
+        <img src="./img/produtos/bikcraft-retro-1.jpg" alt="Bikcraft Retrô" />
         <h2>Retrô</h2>
       </div>
       <div class="grid-5 produto_icone">
         <img src="./img/produtos/retro.svg" alt="Bikcraft Retrô" />
       </div>
       <div class="grid-8">
-        <img
-          src="./img/produtos/bikcraft-retro-2.jpg"
-          alt="Bikcraft Retrô"
-        />
+        <img src="./img/produtos/bikcraft-retro-2.jpg" alt="Bikcraft Retrô" />
       </div>
       <div class="grid-8 produto_info">
-        <p>O passado volta para lembrarmos o que devemos fazer no futuro. A Bikcraft Retrô é uma bicicleta estiloza, feita para você que gosta do clássico, mas que não abre mão do conforto.</p>
+        <p>
+          O passado volta para lembrarmos o que devemos fazer no futuro. A
+          Bikcraft Retrô é uma bicicleta estiloza, feita para você que gosta do
+          clássico, mas que não abre mão do conforto.
+        </p>
         <ul>
           <li>Conforto</li>
           <li>Qualidade</li>
           <li>Design</li>
           <li>Versatilidade</li>
         </ul>
+      </div>
     </section>
 
     <section class="orcamento">
       <div class="container">
         <h2 class="subtitulo">Orçamento</h2>
 
-        <form id="form_orcamento" method="POST" action="./enviar.php" class="form grid-8 formphp">
-					<label for="nome">Nome</label>
-					<input type="text" id="nome" name="nome" required>
-					<label for="email">E-mail</label>
-					<input type="email" id="email" name="email" required>
-					<label for="telefone">Telefone</label>
-					<input type="text" id="telefone" name="telefone">
+        <form
+          id="form_orcamento"
+          method="POST"
+          action="./enviar.php"
+          class="form grid-8 formphp"
+        >
+          <label for="nome">Nome</label>
+          <input type="text" id="nome" name="nome" required />
+          <label for="email">E-mail</label>
+          <input type="email" id="email" name="email" required />
+          <label for="telefone">Telefone</label>
+          <input type="text" id="telefone" name="telefone" />
 
-					<label class="nao-aparece">Se você não é um robô, deixe em branco.</label>
-					<input type="text" class="nao-aparece" name="leaveblank">
-					<label class="nao-aparece">Se você não é um robô, não mude este campo.</label>
-					<input type="text" class="nao-aparece" name="dontchange" value="http://">
+          <label class="nao-aparece"
+            >Se você não é um robô, deixe em branco.</label
+          >
+          <input type="text" class="nao-aparece" name="leaveblank" />
+          <label class="nao-aparece"
+            >Se você não é um robô, não mude este campo.</label
+          >
+          <input
+            type="text"
+            class="nao-aparece"
+            name="dontchange"
+            value="http://"
+          />
 
-					<label for="mensagem">Mensagem</label>
-					<textarea id="mensagem" name="mensagem" required></textarea>
-					<button id="enviar" name="enviar" type="submit" class="btn">Enviar</button>
-				</form>
+          <label for="mensagem">Mensagem</label>
+          <textarea id="mensagem" name="mensagem" required></textarea>
+          <button id="enviar" name="enviar" type="submit" class="btn">
+            Enviar
+          </button>
+        </form>
 
         <div class="orcamento_dados grid-8">
           <h3>Dados</h3>
-            <span>+55 21 99999-9999</span>
-            <span>orcamento@bikcraft.com</span>
+          <span>+55 21 99999-9999</span>
+          <span>orcamento@bikcraft.com</span>
           <h3>Monte a sua Bikcraft</h3>
           <p>Escolha as especificações</p>
           <ul>
@@ -173,11 +197,10 @@
             <li>- E Outros</li>
           </ul>
         </div>
-        
       </div>
     </section>
 
-    <section class="quebra">
+    <div class="quebra">
       <blockquote class="quote-externo container">
         <p>
           "O verdadeiro segredo da felicidade está em ter um genuíno interesse
@@ -185,7 +208,7 @@
         </p>
         <cite>WILLIAM MORRIS</cite>
       </blockquote>
-    </section>
+    </div>
 
     <footer>
       <div class="footer">
@@ -218,12 +241,12 @@
               </li>
               <li>
                 <a href="https://www.instagram.com"
-                  ><img src="./img/redes-sociais/instagram.svg" alt="Facebook"
+                  ><img src="./img/redes-sociais/instagram.svg" alt="Instagram"
                 /></a>
               </li>
               <li>
                 <a href="https://www.twitter.com"
-                  ><img src="./img/redes-sociais/twitter.svg" alt="Facebook"
+                  ><img src="./img/redes-sociais/twitter.svg" alt="Twitter"
                 /></a>
               </li>
             </ul>
