--- a/web/sobre.html
+++ b/web/sobre.html
@@ -5,22 +5,22 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Bikcraft - Saiba mais sobre a empresa</title>
 
-    <meta name="description" content="Compre a sua bicicleta personalizada na Bikcraft. Possuímos modelos Passeio, Esporte e Retrô.">
+    <meta
+      name="description"
+      content="Compre a sua bicicleta personalizada na Bikcraft. Possuímos modelos Passeio, Esporte e Retrô."
+    />
 
-    <meta property="og:type" content="website"/>
-    <meta property="og:title" content="Bikcraft - Saiba mais sobre a empresa"/>
-    <meta property="og:description" content="Compre a sua bicicleta personalizada na Bikcraft. Possuímos modelos Passeio, Esporte e Retrô."/>
-    <meta property="og:url" content="http://bikcraft.com/sobre.html"/>
-    <meta property="og:image" content="http://bikcraft.com/img/og-image.png"/> 
+    <meta property="og:type" content="website" />
+    <meta property="og:title" content="Bikcraft - Saiba mais sobre a empresa" />
+    <meta
+      property="og:description"
+      content="Compre a sua bicicleta personalizada na Bikcraft. Possuímos modelos Passeio, Esporte e Retrô."
+    />
+    <meta property="og:url" content="http://bikcraft.com/sobre.html" />
+    <meta property="og:image" content="http://bikcraft.com/img/og-image.png" />
 
-    <link rel="stylesheet" href="./css/normalize.css" />
-    <link rel="stylesheet" href="./css/reset.css" />
-    <link rel="stylesheet" href="./css/grid.css" />
     <link rel="stylesheet" href="./css/styles.css" />
-    <link rel="stylesheet" href="./css/sobre.css" />
-    <link rel="stylesheet" href="./css/responsivo.css" />
-
-    <link rel="icon" href="./favicon.ico">
+    <link rel="icon" href="./favicon.ico" />
 
     <script>
       document.documentElement.classList.add("js");
@@ -46,9 +46,7 @@
     <section class="introducao-interna interna-sobre">
       <div class="container">
         <h1 data-anime="400" class="fadeInDown">Sobre</h1>
-        <p data-anime="800" class="fadeInDown">
-          Conheça mais sobre a Bikcraft
-        </p>
+        <p data-anime="800" class="fadeInDown">Conheça mais sobre a Bikcraft</p>
       </div>
     </section>
 
@@ -59,9 +57,11 @@
           O verdadeiro segredo da felicidade está em ter um genuíno interesse
           por todos os detalhes da vida cotidiana. Interesse por todos os
           detalhes da vida cotidiana.
-        <p>O verdadeiro segredo da felicidade está em
-          ter um genuíno. interesse por todos os detalhes da vida cotidiana.
-          Interesse por todos os detalhes da vida cotidiana.</p>   
+        </p>
+        <p>
+          O verdadeiro segredo da felicidade está em ter um genuíno. interesse
+          por todos os detalhes da vida cotidiana. Interesse por todos os
+          detalhes da vida cotidiana.
         </p>
       </div>
       <div class="grid-6">
@@ -71,13 +71,12 @@
           <li>- Foco no cliente sem perder a</li>
           <li>- Diversão, preservando a</li>
           <li>- Natureza com sustentabilidade</li>
-        </ul>  
+        </ul>
       </div>
 
       <div class="grid-16 foto-equipe">
-        <img src="./img/equipe-bikcraft.jpg" alt="Equipe Bikcraft">
+        <img src="./img/equipe-bikcraft.jpg" alt="Equipe Bikcraft" />
       </div>
-
     </section>
 
     <section class="qualidade container">
@@ -108,7 +107,7 @@
       </ul>
     </section>
 
-    <section class="quebra">
+    <div class="quebra">
       <blockquote class="quote-externo container">
         <p>
           "O verdadeiro segredo da felicidade está em ter um genuíno interesse
@@ -116,7 +115,7 @@
         </p>
         <cite>WILLIAM MORRIS</cite>
       </blockquote>
-    </section>
+    </div>
 
     <footer>
       <div class="footer">
@@ -149,12 +148,12 @@
               </li>
               <li>
                 <a href="https://www.instagram.com"
-                  ><img src="./img/redes-sociais/instagram.svg" alt="Facebook"
+                  ><img src="./img/redes-sociais/instagram.svg" alt="Instagram"
                 /></a>
               </li>
               <li>
                 <a href="https://www.twitter.com"
-                  ><img src="./img/redes-sociais/twitter.svg" alt="Facebook"
+                  ><img src="./img/redes-sociais/twitter.svg" alt="Twitter"
                 /></a>
               </li>
             </ul>
